# Celery-demo

./: .dockerignore  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  auth.py  config.py  crypto.py  main.py  models.py  pyproject.toml  token_blacklist.py  worker.py
backend/api/v1/: audit.py  auth.py  datasources.py  discovery.py  masking.py  tasks.py  users.py
backend/connectors/: __init__.py  base.py  factory.py  mysql.py  postgresql.py
backend/discovery/: scanner.py
backend/masking/: __init__.py  engine.py  rules.py
backend/tests/: test_crypto.py  test_embedded_frontend.py  test_split_feature.py
docs/plans/: 2026-03-06-frontend-ui-redesign-plan.md  2026-03-06-frontend-ui-redesign.md
frontend/: package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  style.css
frontend/src/components/: RulesCard.vue  StatusCard.vue  UploadCard.vue
